--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,9 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+# All in folder .idea
+.idea/
+
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
